tests/ui/const-generics/mgca/double-wrapped-path-not-accidentally-stabilized.stderr
error: generic parameters may not be used in const operations
  --> $DIR/double-wrapped-path-not-accidentally-stabilized.rs:11:13
   |
LL |     f::<{ { N } }>();
   |             ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

